kubernetes/apps/home-automation/esphome/app/httproute-autoscaling.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
  labels:
    name: ${APP}
spec:
  hostnames:
    - esphome.aresu.eu
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  rules:
    # - backendRefs:
    #     - name: ${APP}
    #       namespace: home-automation
    #       port: 6052
    - backendRefs:
        - name: ${APP}-interceptor-proxy
          namespace: home-automation
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: ${APP}
  namespace: system
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: home-automation
  to:
  - group: ""
    kind: Service
    name: keda-add-ons-http-interceptor-proxy
---
apiVersion: v1
kind: Service
metadata:
  name: ${APP}-interceptor-proxy
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.system.svc.cluster.local
